[metadata]
name = retry_on
version = 0.1.0
description = An advanced Python library providing controlled, pattern-based retry mechanisms for asynchronous and synchronous operations, with customizable backoff strategies, concurrency management, and callback support.
author = Juan Sugg
author_email = juanpedrosugg@gmail.com
url = https://github.com/jsugg/retry-on

[options]
packages = find:

[options.packages.find]
where = src

[options.extras_require]
test = pytest; pytest-cov

[bdist_wheel]
universal = 1

[aliases]
test=pytest